<resources>
    <string name="app_name">众山小</string>
    <string name="input_url">搜索或输入网址</string>
    <!-- 网站首页 -->
    <string name="home_url">https://cn.bing.com/</string>
    <!-- 底部导航 -->
    <string name="nav_right">前进</string>
    <string name="nav_left">后退</string>
    <string name="nav_set">设置</string>
    <string name="nav_page">窗口</string>
    <string name="nav_home">主页</string>
    <string name="settings">Settings</string>


    <string name="website">Website</string>
    <string name="source">Source</string>

    <string name="example_action_button">Done</string>
    <string name="example_action_description">%1$s content would go here. Press the button below to simulate completion.</string>

    <!-- Strings for list of welcome screens -->
    <string name="title_sample">Sample</string>
    <string name="description_sample">The welcome screen for this sample app</string>

    <string name="title_default">Default</string>
    <string name="description_default">No custom styles or properties</string>

    <string name="title_light">Light theme</string>
    <string name="description_light">Light background and dark text</string>

    <string name="title_no_skip">No skip</string>
    <string name="description_no_skip">Skipping is disabled</string>

    <string name="title_back_exit">Back button behaviour</string>
    <string name="description_back_exit">Pressing back will exit rather than navigating through pages</string>

    <string name="title_included_pages">Done Image Button</string>
    <string name="description_included_pages">The done button has an image instead of text. Uses STANDARD_DONE_IMAGE bottom layout.</string>

    <string name="title_custom_page">Custom pages</string>
    <string name="description_custom_page">A welcome screen with custom fragments</string>

    <string name="title_button_bar">Log In/Sign Up</string>
    <string name="description_button_bar">Has log in and sign up buttons rather than the standard navigation buttons. Uses BUTTON_BAR bottom layout.</string>

    <string name="title_single_button">Single button</string>
    <string name="description_single_button">Has a single button, rather than the standard navigation buttons. Uses BUTTON_BAR_SINGLE bottom layout.</string>

    <string name="title_indicator_only">Indicator only</string>
    <string name="description_indicator_only">Uses INDICATOR_ONLY bottom layout. No buttons, just the current page indicator.</string>

    <string name="title_previous_button">Previous Button/Action Bar</string>
    <string name="description_previous_button">Shows a previous button on all but the first page. Back button exits.</string>
    <string name="histories">历 史 记 录</string>
    <string name="taken_space"/>
    <string name="collection_label">类别</string>
    <string name="collections">我 的 收 藏</string>
</resources>