<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#fafafa"
              android:hardwareAccelerated="true"
              android:orientation="vertical"
              tools:context="com.firstpage.firstpage">

    <!-- 顶部地址栏 -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_bar_height"
            android:orientation="horizontal"
            android:background="@drawable/top_bar_bg">

        <ImageView
                android:id="@+id/webIcon"
                android:layout_width="@dimen/top_bar_height"
                android:layout_height="@dimen/top_bar_height"
                android:contentDescription="favicon"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="11dp"
                android:clickable="true"
                android:src="@drawable/internet"
                android:background="#01000000"/>

        <EditText
                android:id="@+id/textUrl"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:layout_marginTop="3dp"
                android:background="#01000000"
                android:hint="@string/input_url"
                android:imeOptions="actionGo"
                android:inputType="textUri"
                android:maxLines="1"
                android:textSize="15sp"
                android:textColor="#606060"
                android:textColorHint="#9f9f9f"/>
        <ImageButton
                android:id="@+id/btnStart"
                android:layout_width="41dp"
                android:layout_height="@dimen/top_bar_height"
                android:focusable="true"
                android:contentDescription="refresh"
                android:padding="11dp"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/refresh"
                android:background="#01000000"
        />

    </LinearLayout>

    <!-- 浏览器容器区域 -->
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="#d1d1d1">

        <!-- 网页进度条 -->
        <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:max="100"
                android:progress="50" />
    </FrameLayout>

    <!-- 底部导航栏 -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

        <!-- 后退按钮 -->
        <RelativeLayout style="@style/NavItem">

            <ImageButton
                    android:id="@+id/goBack"
                    style="@style/NavIcon"
                    android:focusable="true"
                    android:padding="10dp"
                    android:contentDescription="@string/nav_left"
                    android:src="@drawable/nav_left"
                    android:clickable="true"
                    android:scaleType="centerCrop"
                    android:background="#01000000"
            />

        </RelativeLayout>

        <!-- 前进按钮 -->
        <RelativeLayout style="@style/NavItem">

            <ImageButton
                    android:id="@+id/goForward"
                    style="@style/NavIcon"
                    android:clickable="true"
                    android:contentDescription="@string/nav_right"
                    android:scaleType="centerCrop"
                    android:padding="10dp"
                    android:src="@drawable/nav_right"
                    android:background="#01000000"/>

        </RelativeLayout>

        <!-- 菜单 -->
        <RelativeLayout style="@style/NavItem">

            <ImageButton
                    android:id="@+id/Setting"
                    style="@style/NavIcon"
                    android:clickable="true"
                    android:contentDescription="@string/nav_set"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:background="#01000000"
                    android:padding="11dp"
                    android:src="@drawable/nav_set"/>

        </RelativeLayout>

        <!-- 窗口按钮 -->
        <RelativeLayout style="@style/NavItem">


            <ImageButton
                    android:id="@+id/newPage"
                    style="@style/NavIcon"
                    android:clickable="true"
                    android:contentDescription="@string/nav_page"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:background="#01000000"
                    android:padding="11dp"
                    android:src="@drawable/nav_page"/>

            <TextView
                    style="@style/NavIcon"
                    android:gravity="center"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="#555"
                    android:textSize="12sp" android:layout_height="wrap_content" android:layout_width="16dp"
                    android:id="@+id/Pages"/>

        </RelativeLayout>

        <!-- 主页按钮 -->
        <RelativeLayout style="@style/NavItem">

            <ImageButton
                    android:id="@+id/goHome"
                    style="@style/NavIcon"
                    android:clickable="true"
                    android:contentDescription="@string/nav_home"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:background="#01000000"
                    android:padding="11dp"
                    android:src="@drawable/nav_home"/>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>